Add api documentation to /products
